Fixed several layout issues with vertical centering

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -33,7 +33,7 @@ $background-opacity: 0.7;
         top: 0;
         right: 0;
         width: 100%;
-        height: 100%;
+        height: 100vh;
         z-index: -1;
         background: rgba($primary-color, $background-opacity);
       }
