--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -169,9 +169,6 @@
       }
     }
   }
-  main#home h1 {
-    margin-top: 20vh;
-  }
 
   .title-box {
     margin: 0 6vw 0 6vw;
