--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,8 +16,17 @@ body {
   line-height: 1.5;
 }
 
-.img-preload {
-  visibility: hidden;
+.main-grid {
+  display: grid;
+
+  grid-template-areas:
+    'header'
+    'main'
+    'footer';
+
+  grid-template-rows: auto 1fr auto;
+
+  height: 100vh;
 }
 
 // Headings
@@ -47,7 +56,7 @@ a {
 }
 
 header {
-  position: fixed;
+  // position: fixed;
   z-index: 2;
   width: 100%;
 }
@@ -62,9 +71,13 @@ header {
 
 main {
   padding: 4rem;
-  height: 95vh; //comment out if you want a sticky footer
+  // height: 95vh; //comment out if you want a sticky footer
   // This will make the sticky footer
   // min-height: calc(100vh - 60px);
+  display: inline-flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
   .icons {
     margin-top: 1rem;
     a {
@@ -77,11 +90,19 @@ main {
     }
   }
 
+  .box-container {
+    display: inline-block;
+    flex-wrap: wrap;
+    max-width: 45rem;
+    align-items: center;
+    justify-content: center;
+  }
+
   &#home {
     overflow: hidden;
-    h1 {
-      margin-top: 30vh;
-    }
+    // h1 {
+    //   margin-top: 20vh;
+    // }
     .title-box {
       display: inline-flex;
       flex-wrap: wrap;
@@ -147,7 +168,7 @@ main {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  margin-top: 11vh;
+  // margin-top: 11vh;
 
   div {
     display: flex;
@@ -200,7 +221,6 @@ main {
   padding: 1rem;
   background: darken($primary-color, 10);
   color: set-text-color($primary-color);
-  height: 60px;
 
   h3 {
     margin: 0 0.8rem 0 0;
